[workspace]

members = [
  # SCSPR
  "scspr/scspr",
  "scspr/scspr_crate",
  "scspr/scspr_tests",
  "scspr/session_code",
  # LIQUIDITY TRANSFORMER
  "liquidity_transformer/liquidity_transformer",
  "liquidity_transformer/liquidity_transformer_crate",
  "liquidity_transformer/liquidity_transformer_tests",
  "liquidity_transformer/session_code",
  # SYNTHETIC HELPER
  "synthetic_helper_crate",
  # SYNTHETIC TOKEN
  "synthetic_token_crate",
]

[profile.release]
codegen-units = 1
lto = true