[package]
name = "erc20_crate"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../utils/contract-utils" }
hex = { version = "0.4.3", default-features = false }
cryptoxide = "0.3.3"
renvm-sig = "0.1.1 "