[package]
name = "liquidity_transformer"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.2"
liquidity_transformer_crate = { path = "../liquidity_transformer_crate" }

[[bin]]
name = "liquidity_transformer"
path = "bin/liquidity_transformer.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
