[package]
name = "liquidity_transformer_crate"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "=1.4.3"
casper-types = "=1.4.6"
contract-utils = { path = "../../utils/contract-utils" }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
cryptoxide = "0.3.3"
renvm-sig = "0.1.1 "
hex = { version = "0.4.3", default-features = false }
