[package]
name = "liquidity_transformer_crate"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
num-traits= "0.2.15"
renvm-sig = "0.1.1 "
casperlabs-contract-utils = "0.1.2"
hex = { version = "0.4.3", default-features = false }

[patch.crates-io]
renvm-sig = { git = 'https://github.com/Scytalelabs-official/CasperLabs-renvm-sig.git', branch = 'main' }