[package]
name = "proxy_liquidity_transformer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.4"
blake2 = "0.9.1"

[[bin]]
name = "proxy-liquidity-transformer"
path = "bin/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]