[package]
name = "scspr"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.2"
scspr_crate = { path = "../scspr_crate" }

[[bin]]
name = "scspr"
path = "bin/scspr.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]