[package]
name = "scspr_crate"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
num-traits= "0.2.15"
casperlabs-contract-utils = "0.1.2"
synthetic_token_crate = { path = "../../synthetic_token/synthetic_token_crate" }