[package]
name = "session-code-scspr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
num-traits= "0.2.15"

[[bin]]
name = "session-code-scspr"
path = "bin/main.rs"
bench = false
doctest = false
test = false