[package]
name = "synthetic_token_crate"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.2"
num-traits = "0.2.15"
casperlabs-erc20 = "0.3.0"
synthetic_helper_crate = { path = "../../synthetic_helper_crate" }